[package]
name = "trussfs"
version = "0.3.0"
edition = "2021"

[lib]
name = "trussfs"
crate-type = ["cdylib"]

[dependencies]
slotmap = "1.0"
log = "*"
zip = "0.6.2"
notify = "5.1.0"
rustyline = "11.0.0"

[dependencies.env_logger]
version = "0.9.0"
default-features = false
features = ["atty", "humantime", "termcolor"]